[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Arrow.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Arrow_fade"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Arrow" type="Area2D"]
gravity = 9.8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.111301, -0.196581 )
z_index = 1
texture = ExtResource( 1 )
offset = Vector2( -35, 0 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -35.1015, -0.262781 )
polygon = PoolVector2Array( 24.565, 8.51207, 35.5376, 0.371151, 24.0931, -7.53379 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Arrow_fade = SubResource( 1 )

[connection signal="area_shape_entered" from="." to="." method="_on_Arrow_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
